re PR inline-asm/84683 (internal compiler error: in move_for_stack_reg, at reg-stack.c:1173)

PR inline-asm/84683
	* reg-stack.c (move_for_stack_reg): If any_malformed_asm, avoid
	assertion failure.

	* g++.dg/ext/pr84683.C: New test.

From-SVN: r258273